example/lua-routing/lua-with-rules/current-IC/http-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  name: http-echo
  namespace: e2e-tests-set-header
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: http-echo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: http-echo
    spec:
      containers:
      - image: haproxytech/http-echo:latest
        imagePullPolicy: Never
        name: http-echo
        ports:
        - containerPort: 8888
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: e2e-tests-set-header
spec:
  clusterIP: 10.96.47.94
  clusterIPs:
  - 10.96.47.94
  - fd00:10:96::950b
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
  selector:
    app: http-echo
