example/lua-routing/lua-with-rules/current-IC/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"request-set-header":"Cache-Control no-store,no-cache,private"},"name":"http-echo","namespace":"e2e-tests-set-header"},"spec":{"ingressClassName":"haproxy","rules":[{"host":"e2e-tests-set-header.test","http":{"paths":[{"backend":{"service":{"name":"http-echo","port":{"name":"http"}}},"path":"/","pathType":"Prefix"}]}}]}}

    request-set-header: |  ########################################################## Ingress Annotations
      Cache-Control no-store,no-cache,private
      X-Custom-Header helene

  name: http-echo
  namespace: e2e-tests-set-header
spec:
  ingressClassName: haproxy
  rules:
  - host: e2e-tests-set-header.test
    http:
      paths:
      - backend:
          service:
            name: http-echo
            port:
              name: http
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
